tests/integration/errors/const-assign-matrix.it
Assign const matrix

- compilation error
=========
void main() {
    const matrix A[2][2] = {{1,2},{3,4}};
    matrix B[2][2] = {{1,2},{3,4}};

    A = B;
}
=========
<stdin>:5: error: assignement of constant variable 'A'
